# nifhacks

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
lib/nif/: CMakeLists.txt  Geometry.cpp  Geometry.h  NifFile.cpp
src/: format.h  main.cpp  version.h.in
